--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,9 @@
     "xstddef": "cpp",
     "xtr1common": "cpp",
     "xutility": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "string": "cpp",
+    "algorithm": "cpp",
+    "sstream": "cpp"
   }
 }
