--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
     "vector": "cpp",
     "string": "cpp",
     "algorithm": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "array": "cpp"
   }
 }
